--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,8 +25,9 @@ requirements:
 
 test:
   commands:
-    - autodock4 --version
-    - autogrid4 --version
+    - ulimit -a
+    - ulimit -s unlimited && autodock4 --version
+    - ulimit -s unlimited && autogrid4 --version
     - gen_tor_arg_list.sh  # [not win]
 
 about:
