--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,13 +10,13 @@ source:
   url: http://autodock.scripps.edu/downloads/autodock-registration/tars/dist{{ version|replace(".","") }}/autodocksuite-{{ version }}-src.tar.gz
   sha256: {{ sha256 }}
   patches:
-    - AD4_parameters.dat.patch
+    - AD4.1_bound.dat-AD4_parameters.dat.patch
     - autocomm.h.patch
     - constants.h.patch
     - osx.patch  # [osx]
 
 build:
-  number: 2
+  number: 3
   skip: True  # [win or osx]
 
 requirements:
